--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -1,6 +1,13 @@
-cas.server.name=https://cas.example.org:8443
+cas.server.name=https://localhost:8443
 cas.server.prefix=${cas.server.name}/cas
 
 logging.config: file:/etc/cas/config/log4j2.xml
 
 # cas.authn.accept.users=
+
+# Service Registry
+cas.serviceRegistry.initFromJson=false
+cas.serviceRegistry.json.location=file:/etc/cas/services
+
+# see the loop
+cas.ticket.st.numberOfUses=10
